--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "better-scroll": "^1.4.1",
     "vue": "^2.2.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
