--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "better-scroll": "^1.4.1",
+    "fastclick": "^1.0.6",
     "vue": "^2.2.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
